<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_photo">Capture photo</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_menu_button">Menu</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_open_photo_mode">Open photo mode</string>
    <string name="accessibility_open_video_mode">Open video mode</string>
    <string name="accessibility_photo_captured">Photo Captured</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to Refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="action_calendar">Add Event</string>
    <string name="action_call">Call</string>
    <string name="action_contact">Add Contact</string>
    <string name="action_copy">Copy text</string>
    <string name="action_email">Send Email</string>
    <string name="action_image_search">Search Image</string>
    <string name="action_keep">Keep</string>
    <string name="action_lookup">Shopping</string>
    <string name="action_map">Maps</string>
    <string name="action_message_image">Message</string>
    <string name="action_more">More</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_save">Save image</string>
    <string name="action_search">Search</string>
    <string name="camera_quality_high">hq</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto-generate creations</string>
    <string name="pref_burst_settings">Burst settings</string>
    <string name="pref_burst_title">Smartburst</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_zoom_title">Double-tap to zoom</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_experimental">RAW settings</string>
    <string name="pref_gcam_hdr_raw_summary">Save raw DNG files when taking HDR+ images in addition to the standard JPG</string>
    <string name="pref_gcam_hdr_raw_title">HDR+ RAW+JPEG</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this control is not shown, HDR+ is on.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_smartburst_summary">Save only the best 8 images from a burst</string>
    <string name="pref_title_photo_sphere_and_panorama_resolution">Panorama resolution</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Others</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="pref_bsg_mod_title">Advanced settings</string>
    <string name="pref_all_title_summary">After changing any setting, you must completely close the application, the changes will take effect the next time you start.</string>
    <string name="pref_input_model_title">Model</string>
    <string name="pref_input_model_default">0</string>
    <string name="pref_config_camera_title">Config camera HDR+</string>
    <string name="pref_config_camera_default">0</string>
    <string name="pref_all_title_summary_config">"%s
In AUTO mode, the config depends on the Model."</string>
    <string name="pref_parameters_camera_title">HDR+ parameters</string>
    <string name="pref_parameters_camera_default">0</string>
    <string name="setting_sblpf_title">Fix black level Front camera</string>
    <string name="pref_sblpf_default">1600</string>
    <string name="pref_sblp_title">Black level settings</string>
    <string name="pref_enable_sblp_title">Enable</string>
    <string name="pref_all_title_summary_sblp">If disabled, auto values are used</string>
    <string name="setting_dg_title">"Crimson
... - ...
Neutral = 64.00
... + ...
BrightGreen"</string>
    <string name="setting_r_title">"DarkGreen
... - ...
Neutral = 64.00
... + ...
Red"</string>
    <string name="setting_lg_title">"DarkGreen
... - ...
Neutral = 64.00
... + ...
Red"</string>
    <string name="setting_b_title">"Blue
... - ...
Neutral = 64.00
... + ...
Yellow"</string>
    <string name="pref_sblp_default">6400</string>
    <string name="pref_qjpg_title">Final jpg quality HDR+</string>
    <string name="pref_qjpg_default">95</string>
    <string name="pref_compress_dng_title">Compress RAW(*.DNG)</string>
    <string name="pref_sbe_title">Enable SmartBurst</string>
    <string name="pref_all_title_summary_sbe">"Incorrect work of touch-focus is possible.
If enabled, the config of the Nexus6P or Pixels will be used"</string>
    <string name="pref_pmdf_title">Increase the detail of the HDR+</string>
    <string name="pref_pmode_title">Portrait mode on all models</string>
    <string name="pref_refocusmb_title">Lens blur megapixels</string>
    <string name="pref_refocusmb_default">5</string>
    <string name="pref_refocusmb_summary">"%s
The value should not exceed the actual size of the camera module"</string>
    <string name="pref_smas_title">Max.sensitivity analog gain</string>
    <string name="pref_smas_default">0</string>
    <string name="pref_siwl_title">Turn off noise reduction</string>
    <string name="pref_siwl_title_summary">Restart the application, the changes will take effect at the next start</string>
    <string name="pref_pmode_title_summary">If enabled, Blur mode is replaced by Portrait mode</string>
    <string name="pref_pmdf_title_summary">"Increasing the detail of HDR + on the front camera
(Does not work on the model: Nexus 5 and Nexus 6)"</string>
    <string name="pref_compress_dng_summary">Compress DNG to reduce file size</string>
    <string name="pref_portrait_hdrenh_title">HDR+ Enhanced Portrait Mode</string>
    <string name="pref_portrait_hdrenh_summary">Increases dynamic range with Portrait Mode but disables ZSL</string>
    <string name="pref_pmode_summary">Replace Lens Blur with Portrait Mode</string>
    <string name="pref_frot_title">Flip image from the front camera</string>
    <string name="pref_hdrpf_title">Enable HDR+ for Front camera</string>
    <string name="setting_zoompmodeb_title">Zoom in Portrait mode Back camera</string>
    <string name="setting_zoompmodef_title">Zoom in Portrait mode Front camera</string>
    <string name="pref_zoompmode_default">0</string>
    <string name="pref_paemode_title">Correction of auto-exposure in the Portrait mode</string>
    <string name="pref_aemode_title">Correction of auto-exposure</string>
    <string name="pref_aemode_default">0</string>
    <string name="pref_portraitsinglefolder_summary">Recommended for use with Google Photo (camera.use_photos)</string>
    <string name="pref_portraitsinglefolder_title">Save all portrait mode pictures to same folder</string>
    <string name="pref_1_settings_title">General</string>
    <string name="pref_2_settings_title">Front camera</string>
    <string name="pref_3_settings_title">Portrait mode</string>
    <string name="pref_4_settings_title">Other</string>
</resources>