<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_general" android:key="pref_category_general">
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_place_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_save_location_title" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_volume_up_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_sounds_title" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="true" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_touch_app_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gestures_title" android:key="pref_category_gestures" android:order="10">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_zoom_title" android:key="pref_double_tap_zoom_key" android:defaultValue="true" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <PreferenceScreen android:icon="@drawable/quantum_ic_expand_more_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_bsg_mod_title" android:key="pref_category_advanced" android:summary="@string/pref_all_title_summary">
            <PreferenceCategory android:title="@string/pref_1_settings_title" android:key="pref_category_1">
                <ListPreference android:icon="@drawable/ic_model_black_24px" android:entries="@array/pref_input_model_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_input_model_title" android:key="pref_input_model_key" android:summary="%s" android:defaultValue="@string/pref_input_model_default" android:entryValues="@array/pref_input_model_entryvalues" />
                <ListPreference android:icon="@drawable/ic_config_black_24px" android:entries="@array/pref_config_camera_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_config_camera_title" android:key="pref_config_camera_key" android:summary="@string/pref_all_title_summary_config" android:defaultValue="@string/pref_config_camera_default" android:entryValues="@array/pref_config_camera_entryvalues" />
                <ListPreference android:icon="@drawable/ic_hdrparams_grey600_24px" android:entries="@array/pref_parameters_camera_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_parameters_camera_title" android:key="pref_parameters_camera_key" android:summary="%s" android:defaultValue="@string/pref_parameters_camera_default" android:entryValues="@array/pref_parameters_camera_entryvalues" />
                <PreferenceScreen android:icon="@drawable/ic_blacklevel_black_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_sblp_title" android:key="pref_sblp_key">
                    <ListPreference android:entries="@array/pref_sblpf_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_sblpf_title" android:key="pref_sblpf_key" android:summary="%s" android:defaultValue="@string/pref_sblpf_default" android:entryValues="@array/pref_sblpf_entryvalues" />
                    <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_enable_sblp_title" android:key="pref_enable_sblp_key" android:summary="@string/pref_all_title_summary_sblp" android:defaultValue="false" />
                    <ListPreference android:entries="@array/pref_sblp_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_dg_title" android:key="pref_dg_key" android:summary="%s" android:defaultValue="@string/pref_sblp_default" android:entryValues="@array/pref_sblp_entryvalues" />
                    <ListPreference android:entries="@array/pref_sblp_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_r_title" android:key="pref_r_key" android:summary="%s" android:defaultValue="@string/pref_sblp_default" android:entryValues="@array/pref_sblp_entryvalues" />
                    <ListPreference android:entries="@array/pref_sblp_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_lg_title" android:key="pref_lg_key" android:summary="%s" android:defaultValue="@string/pref_sblp_default" android:entryValues="@array/pref_sblp_entryvalues" />
                    <ListPreference android:entries="@array/pref_sblp_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_b_title" android:key="pref_b_key" android:summary="%s" android:defaultValue="@string/pref_sblp_default" android:entryValues="@array/pref_sblp_entryvalues" />
                </PreferenceScreen>
                <ListPreference android:icon="@drawable/quantum_ic_JPG_grey600_24" android:entries="@array/pref_qjpg_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_qjpg_title" android:key="pref_qjpg_key" android:summary="%s" android:defaultValue="@string/pref_qjpg_default" android:entryValues="@array/pref_qjpg_entryvalues" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_2_settings_title" android:key="pref_category_2">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_hdr_plus_front_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdrpf_title" android:key="pref_hdrpf_key" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_grain_black_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_pmdf_title" android:key="pref_pmdf_key" android:summary="@string/pref_pmdf_title_summary" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_rotate_90_degrees_ccw_black_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_frot_title" android:key="pref_frot_key" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_3_settings_title" android:key="pref_category_3">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_portrait_black_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_pmode_title" android:key="pref_pmode_key" android:summary="@string/pref_pmode_summary" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_frontHDRP_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_portrait_hdrenh_title" android:key="pref_portrait_hdrenh_key" android:summary="@string/pref_portrait_hdrenh_summary" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_aeport_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_paemode_title" android:key="pref_paemode_key" android:defaultValue="false" />
                <ListPreference android:icon="@drawable/ic_camera_rear_black_24px" android:entries="@array/pref_zoompmode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_zoompmodeb_title" android:key="pref_zoompmodeb_key" android:summary="%s" android:defaultValue="@string/pref_zoompmode_default" android:entryValues="@array/pref_zoompmode_entryvalues" />
                <ListPreference android:icon="@drawable/ic_camera_front_black_24px" android:entries="@array/pref_zoompmode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_zoompmodef_title" android:key="pref_zoompmodef_key" android:summary="%s" android:defaultValue="@string/pref_zoompmode_default" android:entryValues="@array/pref_zoompmode_entryvalues" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_folder_shared_black_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_portraitsinglefolder_title" android:key="pref_portraitsinglefolder_key" android:summary="@string/pref_portraitsinglefolder_summary" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_4_settings_title" android:key="pref_category_4">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_burst_mode_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_sbe_title" android:key="pref_sbe_key" android:summary="@string/pref_all_title_summary_sbe" android:defaultValue="false" />
                <ListPreference android:icon="@drawable/ic_smas_black_24px" android:entries="@array/pref_smas_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_smas_title" android:key="pref_smas_key" android:summary="%s" android:defaultValue="@string/pref_smas_default" android:entryValues="@array/pref_smas_entryvalues" />
            </PreferenceCategory>
        </PreferenceScreen>
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_hdr_plus_on_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="false" />
        <ListPreference android:icon="@drawable/quantum_ic_aemode_grey600_24" android:entries="@array/pref_aemode_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_aemode_title" android:key="pref_aemode_key" android:summary="%s" android:defaultValue="@string/pref_aemode_default" android:entryValues="@array/pref_aemode_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_noise_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_siwl_title" android:key="pref_siwl_key" android:summary="@string/pref_siwl_title_summary" android:defaultValue="false" />
        <ListPreference android:icon="@drawable/ic_photo_camera_back_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_photo" android:key="pref_camera_picturesize_back_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:icon="@drawable/ic_photo_camera_front_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_photo" android:key="pref_camera_picturesize_front_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_burst_mode_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_burst_settings" android:key="pref_category_smartburst">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_burst_title" android:key="pref_smartburst_classicburst" android:summary="@string/pref_smartburst_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_auto_generate_artifacts_toggle" android:key="pref_auto_generate_artifacts" android:defaultValue="true" />
        </PreferenceScreen>
        <PreferenceScreen android:layout="@layout/hide" android:title="@string/pref_category_advanced" android:key="pref_category_advanced">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_camera_dirty_lens_key" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="false" />
        </PreferenceScreen>
        <ListPreference android:icon="@drawable/quantum_ic_lensblur_grey600_24" android:entries="@array/pref_refocusmb_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_refocusmb_title" android:key="pref_refocusmb_key" android:summary="@string/pref_refocusmb_summary" android:defaultValue="@string/pref_refocusmb_default" android:entryValues="@array/pref_refocusmb_entryvalues" />
        <ListPreference android:icon="@drawable/quantum_ic_panorama_grey600_24" android:entries="@array/pref_lightcycle_quality_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_title_photo_sphere_and_panorama_resolution" android:key="pref_lightcycle_quality_key" android:summary="%s" android:defaultValue="@string/camera_quality_high" android:entryValues="@array/pref_lightcycle_quality_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_RAW_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_experimental" android:key="pref_category_experimental">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_gcam_hdr_raw_title" android:key="pref_camera_hdr_plus_raw_out_key" android:summary="@string/pref_gcam_hdr_raw_summary" android:defaultValue="false" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_compress_dng_title" android:key="pref_compress_dng_key" android:summary="@string/pref_compress_dng_summary" android:defaultValue="false" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <ListPreference android:icon="@drawable/ic_video_camera_back_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_video" android:key="pref_video_quality_back_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <ListPreference android:icon="@drawable/ic_video_camera_front_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_featured_video_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_stabilization" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_google_help_and_feedback" android:key="pref_category_help_and_feedback">
        <PreferenceScreen android:layout="@layout/hide">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_pmode_title" android:key="pref_pmode_key" android:summary="@string/pref_pmode_title_summary" android:defaultValue="true" />
            <Preference android:enabled="false" android:visibility="gone" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_feedback" android:key="pref_launch_feedback" />
            <Preference android:enabled="false" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_help" android:key="pref_launch_help" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/quantum_ic_developer_mode_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_developer_settings" android:key="pref_category_developer" />
    </PreferenceCategory>
</PreferenceScreen>